@@ -1,1 +1,39 @@
 # IDTB100049_Kosal_Sophanith_CPU_Scheduling
+
+Project Description:
+
+The CPU Scheduling Simulator is a Java-based application that simulates several CPU scheduling algorithms, including FCFS, SJF, SRT, and RR. The program allows users to select the algorithm, input processes, and view a Gantt chart output. It also provides performance analysis for each algorithm. This project is menu-driven and features a simple graphical user interface (GUI).
+How to Compile and Run the Program:
+
+    Clone the Repository:
+        Open your terminal and clone the repository using git:
+
+    git clone https://github.com/PromSereyreaksa/IDT100078_Prom_Sereyreaksa_CPU_Scheduling.git
+
+Navigate to the Project Directory:
+
+    Change to the project directory:
+
+    cd IDT100078_Prom_Sereyreaksa_CPU_Scheduling
+
+Compile the Java Program:
+
+    If your project has multiple Java files, you can compile all of them at once using the javac command:
+
+    javac *.java
+
+Run the Program:
+
+    After compiling the Java files, you can run the main class. If the main class is called CPUSchedulingSimulator or something similar, run:
+
+        java CPUSchedulingSimulator
+
+        If the project is set up with a GUI (like JavaFX), ensure that you have JavaFX installed. You might need to configure the --module-path for JavaFX if you encounter any issues.
+
+Additional Setup (if needed):
+
+    JavaFX Setup: If the project uses JavaFX for the GUI and you’re using JDK 11 or later, you’ll need to set up JavaFX. You can download it from Gluon. You can include it in your classpath using:
+
+--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+
+Build with IDE: If you're using an IDE like IntelliJ IDEA, Eclipse, or NetBeans, you can import the project as a Java project and build it directly within the IDE.
